# template-rust

./: .gitignore  README.md  rules.yaml
.github/workflows/: ci_build_test.yml  ci_generate.yml
apigear/: goldenmaster.solution.yaml  testbed.simple.module.yaml
goldenmaster/: Cargo.toml  README.md  rustfmt.toml
goldenmaster/examples/: Cargo.toml
goldenmaster/examples/app/: Cargo.toml
goldenmaster/examples/src/: main.rs
goldenmaster/tb_enum/: Cargo.toml
goldenmaster/tb_enum/src/: lib.rs
goldenmaster/tb_enum/tests/: implementation_enum_interface_test.rs
goldenmaster/tb_same1/: Cargo.toml
goldenmaster/tb_same1/src/: lib.rs
goldenmaster/tb_same1/tests/: implementation_same_enum1_interface_test.rs  implementation_same_enum2_interface_test.rs  implementation_same_struct1_interface_test.rs  implementation_same_struct2_interface_test.rs
goldenmaster/tb_same2/: Cargo.toml
goldenmaster/tb_same2/src/: lib.rs
goldenmaster/tb_same2/tests/: implementation_same_enum1_interface_test.rs  implementation_same_enum2_interface_test.rs  implementation_same_struct1_interface_test.rs  implementation_same_struct2_interface_test.rs
goldenmaster/tb_simple/: Cargo.toml
goldenmaster/tb_simple/src/: lib.rs
goldenmaster/tb_simple/tests/: implementation_no_operations_interface_test.rs  implementation_no_properties_interface_test.rs  implementation_no_signals_interface_test.rs  (+3 more)
goldenmaster/testbed1/: Cargo.toml
goldenmaster/testbed2/: Cargo.toml
templates/: Cargo.toml.tpl  README.md.tpl
templates/examples/: Cargo.toml.tpl
templates/module/: Cargo.toml.tpl
(+74 files in other folders)
